--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=firefox
+browser=chrome
 env=https://login1.nextbasecrm.com
 env1=https://login2.nextbasecrm.com
 username=helpdesk1@cydeo.com
